--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion build_versions.version_sdk
+    buildToolsVersion build_versions.tools_version
 
     defaultConfig {
         applicationId "com.moeiny.reza.optus_test"
-        minSdkVersion 29
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
+        versionCode build_versions.version_code
+        versionName build_versions.version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +32,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    packagingOptions{
+        exclude 'LICENSE.txt'
+    }
+
+    dataBinding{
+        enabled= true
+    }
 }
 
 dependencies {
@@ -37,9 +47,50 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // Android
+    implementation deps.androidx.corektx
+    implementation deps.support.appcompat
+    implementation deps.support.annotatoin
+    implementation deps.support.design
+    implementation deps.support.cardview
+    implementation deps.support.constraintlayout
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+
+    // Retrofit
+    implementation deps.retrofit.retrofit
+    implementation deps.retrofit.convertergson
+    implementation deps.retrofit.gson
+    implementation deps.retrofit.interceptor
+    implementation deps.retrofit.adapterrxjava2
+
+    // Gson
+    implementation deps.google.gson
+
+    // Lifecycle
+    kapt deps.lifecycle.compiler
+    implementation deps.lifecycle.extensions
+    implementation deps.lifecycle.livedata
+    implementation deps.lifecycle.rx
+
+
+    // Test
+    androidTestImplementation deps.test.runner
+    androidTestImplementation deps.test.rules
+    androidTestImplementation deps.test.espressocore
+    androidTestImplementation deps.test.roomtesting
+    testImplementation deps.test.mockito
+    testImplementation deps.test.mockitokotlin
+    testImplementation deps.test.mockitoinline
+
+    //glide
+    implementation deps.github.glide
+    annotationProcessor deps.github.glidecompailer
+
+    implementation 'com.google.dagger:dagger:2.31.2'
+    kapt 'com.google.dagger:dagger-compiler:2.31.2'
 }
